Fixes overflow issue for first light child

--- a/src/WebComponents/Overflow/overflow.scss
+++ b/src/WebComponents/Overflow/overflow.scss
@@ -18,6 +18,11 @@
         vi-size-tracker {
             z-index: -1;
         }
+
+        > div#first {
+            width: 0;
+            opacity: 0;
+        }
     }
 
     #overflowPopup {
